--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                <a href="" class="button">Shop Now</a>
             </div>
            <div class="class1">
-               <img src="images/photo1.png">
+               <img src="images/photo1.PNG">
            </div>
            </div>
         </div>
