--- a/index.html
+++ b/index.html
@@ -16,11 +16,11 @@
         <img src="images/logo.png" width="150px"></div>
         <nav>
         <ul>
-            <li><a href="">Home</a></li>
-            <li><a href="">Products</a></li>
-            <li><a href="">About</a></li>
-            <li><a href="">Contact</a></li>
-            <li><a href="">Account</a></li>
+            <li><a href="kaylekrizta/BSCS3a.github.io/index.html">Home</a></li>
+            <li><a href="kaylekrizta/BSCS3a.github.io/products.html">Products</a></li>
+            <li><a href="kaylekrizta/BSCS3a.github.io/about.html">About</a></li>
+            <li><a href="kaylekrizta/BSCS3a.github.io/contact.html">Contact</a></li>
+            <li><a href="kaylekrizta/BSCS3a.github.io/account">Account</a></li>
             </ul>
         </nav>
         </div>
