--- a/index.html
+++ b/index.html
@@ -17,10 +17,12 @@
         <nav>
         <ul>
             <li><a href="kaylekrizta/BSCS3a.github.io/index.html">Home</a></li>
-            <li><a href="product.html" onclick="window.open('product.html');"></a></li>
+            <li><a href="kaylekrizta/BSCS3a.github.io/product.html" onclick="window.open('kaylekrizta/BSCS3a.github.io/product.html');"></a></li>
             <li><a href="kaylekrizta/BSCS3a.github.io/about.html">About</a></li>
             <li><a href="kaylekrizta/BSCS3a.github.io/contact.html">Contact</a></li>
             <li><a href="kaylekrizta/BSCS3a.github.io/account">Account</a></li>
+
+              <li><a href="kaylekrizta/BSCS3a.github.io/product.html" onclick="window.open('kaylekrizta/BSCS3a.github.io/product.html');">Products</a></li>
             </ul>
         </nav>
         </div>
