--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <img src="images/logo.png" width="150px"></div>
         <nav>
         <ul>
-            <li><a href="kaylekrizta/BSCS3a.github.io/index.html">Home</a></li>
+            <li><a href="../index.html">Home</a></li>
             <li><a href="kaylekrizta/BSCS3a.github.io/product.html" onclick="window.open('kaylekrizta/BSCS3a.github.io/product.html');"></a></li>
             <li><a href="kaylekrizta/BSCS3a.github.io/about.html">About</a></li>
             <li><a href="kaylekrizta/BSCS3a.github.io/contact.html">Contact</a></li>
