--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
         <img src="images/logo.png" width="150px"></div>
         <nav>
         <ul>
-            <li><a href="../index.html">Home</a></li>
-            <li><a href="./product.html"></a></li>
+            <li><a href="https://kaylekrizta.github.io/BSCS3a.github.io/index.html">Home</a></li>
+            <li><a href="https://kaylekrizta.github.io/BSCS3a.github.io/product.html"></a></li>
             <li><a href="kaylekrizta/BSCS3a.github.io/about.html">About</a></li>
             <li><a href="kaylekrizta/BSCS3a.github.io/contact.html">Contact</a></li>
             <li><a href="kaylekrizta/BSCS3a.github.io/account">Account</a></li>
